--- a/pages/activites.html
+++ b/pages/activites.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nos Activités - IAkiri</title>
+    <link rel="icon" type="image/svg+xml" href="../images/logo/logo.svg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <style>
@@ -113,7 +114,10 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="../index.html" class="logo">IAkiri</a>
+        <a href="../index.html" class="logo">
+            <img src="../images/logo/logo-removebg-preview.png" alt="IAkiri Logo">
+            <span>IAkiri</span>
+        </a>
         <ul class="nav-links">
             <li><a href="../index.html">Accueil</a></li>
             <li><a href="activites.html">Activités</a></li>
