Update: Remove text from logo and enhance logo styling

--- a/pages/equipe.html
+++ b/pages/equipe.html
@@ -127,9 +127,9 @@
                     <img src="../assets/images/team-profile.svg" alt="Directeur Général">
                 </div>
                 <div class="member-info">
-                    <h3>Thomas Martin</h3>
+                    <h3>Aboubacar Tuo</h3>
                     <div class="member-role">Directeur Général</div>
-                    <p class="member-bio">15 ans d'expérience dans l'IA et la transformation digitale des entreprises.</p>
+                    <p class="member-bio">IA et la transformation digitale des entreprises.</p>
                     <div class="expertise-tags">
                         <span class="expertise-tag">Intelligence Artificielle</span>
                         <span class="expertise-tag">Stratégie</span>
@@ -142,9 +142,9 @@
                     <img src="../assets/images/team-profile.svg" alt="Directrice Technique">
                 </div>
                 <div class="member-info">
-                    <h3>Sophie Dubois</h3>
-                    <div class="member-role">Directrice Technique</div>
-                    <p class="member-bio">Experte en machine learning et développement de solutions IA innovantes.</p>
+                    <h3>Karamoko Diaby</h3>
+                    <div class="member-role">...</div>
+                    <p class="member-bio">...</p>
                     <div class="expertise-tags">
                         <span class="expertise-tag">Machine Learning</span>
                         <span class="expertise-tag">Deep Learning</span>
@@ -157,7 +157,7 @@
                     <img src="../assets/images/team-profile.svg" alt="Responsable Data Science">
                 </div>
                 <div class="member-info">
-                    <h3>Alexandre Chen</h3>
+                    <h3>...</h3>
                     <div class="member-role">Responsable Data Science</div>
                     <p class="member-bio">Spécialiste en analyse de données et modélisation prédictive.</p>
                     <div class="expertise-tags">
@@ -172,7 +172,7 @@
                     <img src="../assets/images/team-profile.svg" alt="Consultante Senior">
                 </div>
                 <div class="member-info">
-                    <h3>Marie Lambert</h3>
+                    <h3>...</h3>
                     <div class="member-role">Consultante Senior</div>
                     <p class="member-bio">Experte en intelligence économique et analyse stratégique.</p>
                     <div class="expertise-tags">
